--- a/src/scss/core/_fonts.scss
+++ b/src/scss/core/_fonts.scss
@@ -44,4 +44,27 @@
     src: url('../assets/fonts/Roboto-Light.ttf');
     font-display: swap; 
 }
+@font-face {
+    font-family: 'polysans';
+    src: url('../assets/fonts/PolySans.ttf');
+    font-display: swap; 
+}
+@font-face {
+    font-family: 'polysans-md';
+    src: url('../assets/fonts/PolySans-Medium.ttf');
+    font-display: swap; 
+}
+@font-face {
+    font-family: 'polysans-bold';
+    src: url('../assets/fonts/PolySans-Bold.ttf');
+    font-display: swap; 
+}
+
+
+@font-face {
+    font-family: 'polysans-light';
+    src: url('../assets/fonts/PolySans-Light.ttf');
+    font-display: swap; 
+}
+
 
