--- a/src/scss/core/_globals.scss
+++ b/src/scss/core/_globals.scss
@@ -1,7 +1,6 @@
 html {
-
-
- 
+  height: max-content;
+  width: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 
@@ -15,12 +14,18 @@ body {
   font-family: "roboto", sans-serif;
   background-color:  #1E1E1E;;
   cursor: crosshair;
+  
 }
 
 
 
 section{
   // padding:4rem
+}
+
+.scroll-container{
+  width: 100%;
+  object-fit: contain;
 }
 
 ::-webkit-scrollbar {
