--- a/src/scss/shared/_fonts.scss
+++ b/src/scss/shared/_fonts.scss
@@ -10,6 +10,29 @@
 }
 
 
+.main-header{
+  font-family: 'polysans-bold';
+  font-size: 6.75rem;
+  font-weight: 700;
+}
+.main-subheader{
+  font-family: 'polysans-bold';
+  font-size: 3.75rem;
+  font-weight: 700;
+}
+
+.section-header{
+  font-family: 'polysans-bold';
+  font-size: 5rem;
+  font-weight: 700;
+}
+
+// .main-subheader{
+//   font-family: 'polysans-md';
+//   font-size: 2rem;
+// }
+
+
 .nav-regular{
   font-family: 'circular-regular';
   font-size: 1rem;
@@ -41,3 +64,10 @@
 
 //font family
 //size::after
+
+@media screen and (max-widtth:485px) {
+  .main-header{
+    font-size: 2.75rem;
+
+  }
+}
