--- a/src/scss/components/_titleSection.scss
+++ b/src/scss/components/_titleSection.scss
@@ -11,6 +11,7 @@
     background-size: cover;
     max-width: 150rem;
     color: white;
+    background-attachment: fixed;
   
 
     &__main-container{
