--- a/src/scss/shared/_fonts.scss
+++ b/src/scss/shared/_fonts.scss
@@ -70,4 +70,10 @@
     font-size: 2.75rem;
 
   }
+  .main-subheader{
+    font-size: 1rem !important;
+  }
+  .md-text{
+    font-size: 1.2rem !important;
+  }
 }
