--- a/src/scss/components/_heroSection.scss
+++ b/src/scss/components/_heroSection.scss
@@ -43,12 +43,18 @@
 
 @media screen and (max-width:485px) {
     .hero-section{
-        width: 100vw !important;
-        padding: 1rem;
+        width: 100% !important;
+        background-color: red;
+        // padding:0 1rem;
+        padding:0;
+        padding-top: 1rem;
+        padding-left: 1rem;
 
         &__hero-container{
             flex-direction: column;
-
+            padding:0;
+            margin:0 !important;
+        
             &--text-container{
                 h1{
                     width: 20rem;
