--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  padding:1rem 10rem;
+//   padding:1rem 10rem;
 position: absolute;
 width: 100%;
 
@@ -43,7 +43,9 @@ color: white;
 @media screen and (max-width:485px) {
     .navbar{
         display: flex;
-        padding:1rem;
+        padding:0;
+        padding-top: 1rem;
+        padding-left: 1rem;
         width: 100%;
 
         &__link-container , &__button {
