--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-//   padding:1rem 10rem;
+  padding:1rem 10rem;
 position: absolute;
 width: 100%;
 
