--- a/src/scss/components/_titleSection.scss
+++ b/src/scss/components/_titleSection.scss
@@ -12,6 +12,7 @@
     // max-width: 150rem;
     color: white;
     // background-attachment: fixed;
+    border: 2px solid red;
   
 
     &__main-container{
