--- a/src/scss/shared/_fonts.scss
+++ b/src/scss/shared/_fonts.scss
@@ -4,9 +4,9 @@
   letter-spacing: calc(-0.015 * 32px);
 
 
-  @media screen and (min-width:1000px) {
-    font-size: calc(150vw / 1368 * 10);
-  }
+  // @media screen and (min-width:1000px) {
+  //   font-size: calc(150vw / 1368 * 10);
+  // }
 }
 
 
