--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  padding:1rem 10rem;
-position: absolute;
+    box-sizing: border-box;
+// position: absolute;
 width: 100%;
 
 
