--- a/src/scss/components/_titleSection.scss
+++ b/src/scss/components/_titleSection.scss
@@ -13,12 +13,14 @@
     color: white;
     // background-attachment: fixed;
     border: 2px solid red;
+    box-sizing: border-box;
+    padding: 1rem 10rem;
   
 
     &__main-container{
         width: 100%;
-        padding:1rem 10rem;
-        height: 100%;
+        border:2px solid blue;
+        min-height: 70rem;
     
         display: flex;
         align-items: center;
@@ -29,9 +31,11 @@
             display: flex;
             flex-direction: column;
             gap:4rem;
+            border: 2px solid blue;
+            flex-basis: 70%;
 
             h1{
-                width: 90%;
+                width: 100%;
             
             }
 
@@ -92,43 +96,33 @@ img{
 }
 
 
+
 @media screen and (max-width:485px) {
     .titleSection{
-        width: 100%;
-        max-width: 100%;
-        // box-sizing: border-box;
-        
+        padding: 0;
+        height: 100vh;
+
         &__main-container{
-            padding:0  ;
-            padding-top: 1rem;
-            padding-left: 1rem;
+            height: 100%;
 
             &--text-content{
-                // font-size: 4rem !important;
+                flex-basis: 100%;
 
-                h1{
-                    width: 100%;
-                    font-size: 3.5rem;
-                
-                }
-    
                 p{
                     width: 100%;
-                    font-size: 1.2rem;
                 }
-    
-
             }
 
-            
-        &--clients{
-            bottom:5rem;
-            margin-left: 1.5rem;
-        }
+            &--clients{
+                margin-left: 1rem;
+            position: relative;
+            }
 
             &--image-container{
-                display: none;
+display: none;
+
             }
+
         }
     }
 }
