--- a/src/scss/components/_heroSection.scss
+++ b/src/scss/components/_heroSection.scss
@@ -70,6 +70,7 @@
         &__hero-container{
             flex-direction: column;
             padding:0;
+            padding-left: 2rem;
             margin:0 !important;
           
 
@@ -99,3 +100,6 @@
         }
     }
 }
+
+
+
