--- a/src/scss/components/_faqSectionl.scss
+++ b/src/scss/components/_faqSectionl.scss
@@ -50,8 +50,8 @@
             flex-direction: column;
 
             &--text-container{
-                width: 25rem;
-                padding-bottom: 2rem;
+                width: 100%;
+                padding-bottom: 6rem;
 
                 h1{
                     width: 100%;
@@ -59,6 +59,12 @@
                 }
            
                 
+            }
+
+            &--questions-container{
+                width: 100%;
+                flex-basis: 100%;
+               
             }
         }
 
