--- a/src/scss/core/_globals.scss
+++ b/src/scss/core/_globals.scss
@@ -30,8 +30,8 @@ section{
   object-fit: contain;
 }
 
-::-webkit-scrollbar {
-  width: 6px;
-  display: none;
+// ::-webkit-scrollbar {
+//   width: 6px;
+//   // display: none;
 
-}
+// }
