--- a/src/scss/components/_characterSection.scss
+++ b/src/scss/components/_characterSection.scss
@@ -77,6 +77,9 @@
                 display: none;
             }
         }
+        &__title{
+            padding-left: 2rem;
+        }
     }
 }
 
