--- a/src/scss/components/_heroSection.scss
+++ b/src/scss/components/_heroSection.scss
@@ -64,7 +64,7 @@
         width: 100% !important;
         padding: 0;
         // padding:0 1rem;
-        padding:0;
+        padding:10rem 0;
       
 
         &__hero-container{
