--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -41,6 +41,7 @@
         position:relative;
         top: 75%;
         left: 80%;
+        font-family: 'circular-regular';
     }
 }
 
@@ -57,6 +58,7 @@
                 width: 80%;
                 position: relative;
                 margin: auto;
+                display: none;
                 
               
                 // display: flex;
