--- a/src/scss/components/_heroSection.scss
+++ b/src/scss/components/_heroSection.scss
@@ -6,10 +6,11 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center ;
     color: white;
     height: max-content;
     align-items: center;
-
+    min-height: 30rem;
     box-sizing: border-box;
     padding: 1rem 10rem;
   
