--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,7 +6,9 @@
 @import "core/variables";
 @import "core/fonts";
 @import "core/globals";
-@import "core/locomotive";
+// @import "core/locomotive";
+@import 'core/buttons';
+
 
 
 @import "shared/fonts";
