--- a/src/scss/core/_buttons.scss
+++ b/src/scss/core/_buttons.scss
@@ -41,7 +41,8 @@ font-family: 'circular-regular';
     color: black;
     transition: 0.60s;
     cursor: pointer;
-    border:2px solid #E85C99
+    border:2px solid #E85C99;
+    scale:1.1
   }
 
 }
