--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -16,7 +16,28 @@
 
         &--links{
             display:  flex;
-            gap:4rem
+            gap:4rem;
+            
+
+            h3{
+                background: linear-gradient(90deg, #E85C99 0%, #A53DE2 110.61%, #FF3C5F 155.21%);
+                background-position: right -100% bottom 0;
+                background-size: 200% 2px;
+                background-repeat: no-repeat;
+                transition:
+                background-size 0.3s,
+                background-position 0s 0.3s ; 
+                
+
+                &:hover{
+                    background-position: 100% 100%; 
+                    background-size: 100% 2px;
+                    cursor: pointer;
+                   
+                }
+            }
+
+           
         }
     }
 
