--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -48,6 +48,11 @@
 
 @media screen and (max-width:485px) {
     .preloader{
+        &__count{
+            top:-5%;
+
+            font-size:10vw
+        }
         width: 100vw;
         &__imagescontainer{
             display: flex;
