--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -54,7 +54,20 @@
         &--links{
             display: flex;
             gap:2rem;
-            text-decoration: underline;
+            
+
+            h1{
+                text-decoration: underline;
+              
+              &:hover{
+                text-decoration-color: #E85C99;
+                cursor: pointer;
+              }  
+
+              &:nth-child(2):hover{
+                text-decoration-color:#A53DE2
+              }
+            }
         }
     }
 
