--- a/src/scss/shared/_fonts.scss
+++ b/src/scss/shared/_fonts.scss
@@ -1,14 +1,3 @@
-%title-2 {
-  font-size: 32px;
-  line-height: 0.7;
-  letter-spacing: calc(-0.015 * 32px);
-
-
-  // @media screen and (min-width:1000px) {
-  //   font-size: calc(150vw / 1368 * 10);
-  // }
-}
-
 
 .main-header{
   font-family: 'polysans-bold';
@@ -27,11 +16,6 @@
   font-weight: 700;
 }
 
-// .main-subheader{
-//   font-family: 'polysans-md';
-//   font-size: 2rem;
-// }
-
 
 .nav-regular{
   font-family: 'circular-regular';
@@ -41,7 +25,7 @@
 .md-text{
   font-family: 'roboto-light';
   font-size: 1.8rem;
-  line-height:30px ;
+  line-height:3rem ;
 }
 
 
@@ -53,7 +37,7 @@
   font-family: 'circular-regular';
   font-size: 1.3rem;
   font-weight: 100;
-  line-height: 25px;
+  line-height: 3rem;
 }
 
 .regular-header{
@@ -61,9 +45,6 @@
   font-size: 3rem;
 }
 
-
-//font family
-//size::after
 
 @media screen and (max-widtth:485px) {
   .main-header{
